--- a/templates/votive_relief.html
+++ b/templates/votive_relief.html
@@ -52,13 +52,13 @@
                     <div class= "wrapper">
                             <img src={{image}} alt="object1" class="img-fluid">
                             {%for entry in depictions%}
-                                <a href="#{{entry[0]}}">
-                                    <div class="boundingbox depictions" style="left: {{entry[1][0]}}%; top: {{entry[1][1]}}%; padding-right: {{entry[1][2] * 0.9}}%; padding-bottom: {{entry[1][3]}}%;" id="{{entry[0]}}.pos"></div>
+                                <a href="#{{loop.index-1}}.depicts">
+                                    <div class="boundingbox depictions" style="left: {{entry[1][0]}}%; top: {{entry[1][1]}}%; padding-right: {{entry[1][2] * 0.9}}%; padding-bottom: {{entry[1][3]}}%;" id="{{loop.index-1}}.depicts.pos"></div>
                                 </a>
                             {%endfor%}
                             {%for entry in translations%}
-                                <a href="#{{entry[0]}}">
-                                    <div class="boundingbox inscriptions" style="left: {{entry[2][0]}}%; top: {{entry[2][1]}}%; padding-right: {{entry[2][2] * 0.9}}%; padding-bottom: {{entry[2][3]}}%;" id="{{entry[0]}}.pos"></div>
+                                <a href="#{{loop.index-1}}.inscripts">
+                                    <div class="boundingbox inscriptions" style="left: {{entry[2][0]}}%; top: {{entry[2][1]}}%; padding-right: {{entry[2][2] * 0.9}}%; padding-bottom: {{entry[2][3]}}%;" id="{{loop.index-1}}.inscripts.pos"></div>
                                 </a>
                             {%endfor%}
                     </div>
@@ -86,7 +86,7 @@
                         <!-- Loading in data from Flask and using Jinja to put the data onto the page-->
                         <h1>Inscriptions on this Object</h1> <br>
                         {%for entry in translations%}
-                            <div id="{{entry[0]}}">
+                            <div id="{{loop.index-1}}.inscripts">
                                 <h4> Inscription:</h4>
                                     <text>{{entry[0]}}</text>
                                     <br>
@@ -94,7 +94,7 @@
                                     <text>{{entry[1]}}</text>
                                     <br>
                             </div>
-                            <a href="#{{entry[0]}}.pos"> 
+                            <a href="#{{loop.index-1}}.inscripts.pos"> 
                                 <h4>Location on Image</h4> 
                             </a>
                             <hr style="border-width:5px">    
@@ -107,10 +107,10 @@
                         <h1>Depictions on this Object</h1> <br>
                         {%for entry in depictions%}
                             {% set title = page_titles[loop.index-1] %}
-                            <div id="{{entry[0]}}">
+                            <div id="{{loop.index-1}}.depicts">
                                 <h4>Depicts:</h4>
                                     <a href="{{entry[0]}}">{{title}}</a>
-                                <a href="#{{entry[0]}}.pos"> 
+                                <a href="#{{loop.index-1}}.depicts.pos"> 
                                     <h4>Location on Image</h4> 
                                 </a>
                             </div>
